[package]
name = "infinisync"
description = "high performance smf repo"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pfcp = { workspace = true, features = ["rel-15"] }
serde.workspace = true
serde_yaml.workspace = true
oasbi.workspace = true
async-trait.workspace = true
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
openapi-smf.workspace = true
bytes.workspace = true
thiserror.workspace = true
tower-http.workspace = true
tower.workspace = true

[dev-dependencies]
# pfcp = { workspace = true, features = ["tests", "default"] }
